program works for set n

--- a/app/static/style.css
+++ b/app/static/style.css
@@ -3,3 +3,17 @@
 
 /* ********************* */
 /* Resets, Global Theme */
+
+
+input {
+  /* To make sure that all text fields have the same font settings
+     By default, textareas have a monospace font */
+  font: 1em sans-serif;
+
+  /* Uniform text field size */
+  width: 100px;
+  box-sizing: border-box;
+
+  /* Match form field borders */
+  border: 1px solid #999;
+}
