--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -34,4 +34,7 @@
         <br>
         <input type="submit" value="Submit">
     </form>
+    {% if result %}
+        <h2>Result: {{ result }}</h2>
+    {% endif %}
 {% endblock %}
