--- a/app/static/style.css
+++ b/app/static/style.css
@@ -18,9 +18,13 @@ input {
   border: 1px solid #999;
 }
 
+.main {
+  text-align: center;
+}
+
 /* Dropdown Button */
 .dropbtn {
-  background-color: #04AA6D;
+  background-color: gray;
   color: white;
   padding: 16px;
   font-size: 16px;
@@ -58,4 +62,4 @@ input {
 .dropdown:hover .dropdown-content {display: block;}
 
 /* Change the background color of the dropdown button when the dropdown content is shown */
-.dropdown:hover .dropbtn {background-color: #3e8e41;}
+.dropdown:hover .dropbtn {background-color: gray;}
