--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -17,6 +17,8 @@
         </ul>
         {% endif %}
         {% endwith %}
-        {% block content %}{% endblock %}
+        <div class="main">
+            {% block content %}{% endblock %}
+        </div>
     </body>
 </html>
