Implemented UI for normalization

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -1,13 +1,15 @@
 <html>
     <head>
         {% if title %}
-        <title>Determinant - {{ title }}</title>
+        <title>{{ title }}</title>
         {% else %}
-        <title>Determinant</title>
+        <title>Linear Algebra</title>
         {% endif %}
         <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
     </head>
     <body>
+        <a href="{{ url_for('index') }}">Determinant</a>
+        <a href="{{ url_for('orthonormalize') }}">Orthonormalize</a>
         {% with messages = get_flashed_messages() %}
         {% if messages %}
         <ul>
