normalize instead of "orthonormalize"

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -9,7 +9,7 @@
     </head>
     <body>
         <a href="{{ url_for('index') }}">Determinant</a>
-        <a href="{{ url_for('orthonormalize') }}">Orthonormalize</a>
+        <a href="{{ url_for('normalize') }}">Normalize</a>
         {% with messages = get_flashed_messages() %}
         {% if messages %}
         <ul>
