--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -10,6 +10,7 @@
     <body>
         <a href="{{ url_for('index') }}">Determinant</a>
         <a href="{{ url_for('normalize') }}">Normalize</a>
+        <a href="{{ url_for('orthogonals') }}">Orthogonals</a>
         {% with messages = get_flashed_messages() %}
         {% if messages %}
         <ul>
